<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_layout_card_view">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="220dp"
                android:id="@+id/image_notification"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile_image"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_notification"
                android:textColor="@color/colorPrimary"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textSize="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/image_notification"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_accept_btn"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textAllCaps="false"
                android:text="@string/accept_friend_request"
                android:textAlignment="center"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="79dp"
                android:background="@color/light_green"
                android:layout_marginTop="5dp"
                android:layout_below="@id/image_notification"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_decline_btn"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textAllCaps="false"
                android:text="@string/cancel_friend_request"
                android:textAlignment="center"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="79dp"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="5dp"
                android:layout_below="@id/request_accept_btn"
                android:visibility="gone"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>