<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register"
        tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="260dp" />


        <RelativeLayout
            android:id="@+id/phoneAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        app:ccp_defaultNameCode="IN" />

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/_9835579014"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:id="@+id/codeText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/phoneAuth"
            android:layout_margin="25dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@android:color/white"
            android:hint="@string/write_you_code_here"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/continueNextButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@+id/codeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary"
            android:text="@string/continues"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

    </RelativeLayout>

<!-- For all api version use below code. Here we changed the color of progressBar using Java code. -->
<!--    android:theme="@style/progressBarViolet"-->

<!--    For api version 21 and higher directly use tint color-->
<!--    android:indeterminate="true"-->
<!--    android:indeterminateTintMode="src_atop"-->
<!--    android:indeterminateTint="@color/magenta"-->

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>